--- a/SendIT/src/app/admin/admin.component.css
+++ b/SendIT/src/app/admin/admin.component.css
@@ -146,7 +146,7 @@ justify-content: space-between;
 .body{
 
     display: flex;
-    font-size: 20px;
+    font-size: 15px;
 
     flex-direction: column;
 
@@ -158,7 +158,7 @@ justify-content: space-between;
 
 .body span{
 
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .stat-users{
@@ -315,6 +315,12 @@ justify-content: space-between;
 
 }
 
+.date{
+
+    width: 230px;
+    padding: 5px;
+}
+
 .close{
 
     display: flex;
@@ -340,6 +346,7 @@ justify-content: space-between;
 
     align-items: center;
 
+
     
 }
 
@@ -355,6 +362,15 @@ justify-content: space-between;
     margin: 5px;
 
     border-radius: 10px;
+
+    flex: 1;
+}
+
+
+.my-google-map{
+
+    flex: 1.5;
+
 }
 
 .add-parcel-item-head{
