--- a/SendIT/src/app/admin/admin.component.css
+++ b/SendIT/src/app/admin/admin.component.css
@@ -353,7 +353,7 @@ justify-content: space-between;
 .add-parcel-item{
 
 
-    height: 80%;
+    height: 90%;
 
     width: 50%;
 
@@ -482,3 +482,31 @@ form button{
 
     border: none;
 }
+
+
+
+  
+  .list {
+    max-width: 100%;
+    display: flex;
+
+    margin: 10px;
+
+    align-items: center;
+
+    justify-content: center;
+
+   
+    
+  }
+
+  .my-pagination ::ng-deep{
+    background: red;
+  }
+  .list-item{
+
+    color: #4B4242;
+  }
+  li {
+    margin-bottom: 5px;
+  }
