--- a/SendIT/src/app/auth/login/login.component.css
+++ b/SendIT/src/app/auth/login/login.component.css
@@ -105,3 +105,24 @@ a{
 
     cursor: pointer;
 }
+
+input.ng-touched.ng-invalid{
+
+    border-left: px solid red;
+}
+
+input.ng-valid.ng-touched{
+
+    border-left: 5px solid green;
+
+
+}
+
+.errors{
+
+    margin-left: 30px;
+
+    font-size: 12px;
+
+    color: red;
+}
