--- a/SendIT/src/app/auth/login/login.component.html
+++ b/SendIT/src/app/auth/login/login.component.html
@@ -9,17 +9,31 @@
 
     <div class="login-form">
 
-    <form>
+    <form #form="ngForm"  (ngSubmit)="onSubmit()">
         <label for="">Email</label>
 
-        <input type="Enter email" placeholder="Enter email">
+        <input type="text" placeholder="Enter email" ngModel name="email" email required #email ="ngModel">
+
+        <div class="errors">
+
+
+            <span *ngIf="!email.valid && email.touched">Enter a valid email</span>
+
+        </div>
 
         <label for="">Password</label>
 
-        <input type="password" placeholder="Enter password">
+        <input type="password" placeholder="Enter password" ngModel name="password" required #password ="ngModel">
+
+        <div class="errors">
 
 
-        <button class="btn-login">Login</button>
+            <span *ngIf="!password.valid && password.touched">Enter a valid password</span>
+
+        </div>
+
+
+        <button class="btn-login" [disabled]="!form.valid" >Login</button>
 
 
         <span class="already-have-account"> <a routerLink="/auth/register">You don't have an account?</a> </span>
