--- a/SendIT/src/app/components/about/about.component.html
+++ b/SendIT/src/app/components/about/about.component.html
@@ -42,7 +42,7 @@
             <li>Your parcel will be repackaged by us.</li>
             <li>You will get notification when your order is fulfilled.</li>
 
-            <li>Your parcel very safe with us.</li>
+            <li>Your parcel is very safe with us.</li>
             <li>We will give you discount on orders above 1kg</li>
             <li>Parcel is handled with a lot of care.</li>
         </ol>
