--- a/SendIT/src/app/auth/login/login.component.css
+++ b/SendIT/src/app/auth/login/login.component.css
@@ -72,6 +72,7 @@ label{
     margin-bottom: 20px;
 
 
+    cursor: pointer;
     font-size: 20px;
     background-color: #F9E57C;
 
@@ -125,4 +126,87 @@ input.ng-valid.ng-touched{
     font-size: 12px;
 
     color: red;
+}
+
+@media screen and (max-width: 600px){
+
+    .image{
+
+        display: none;
+    }
+
+    .login-form{
+
+        flex: 1;
+    
+        background-color: #82D78A;
+    
+    
+        margin: 50px;
+    
+        height: 500px;
+    
+        width: 300px;
+    
+        border-radius: 10px;
+    }
+
+
+    .login-form input{
+
+        margin-left: 20px;
+    
+        display: block;
+    
+        padding: 5px;
+    
+        width: 250px;
+    
+        border: none;
+    
+        border-radius: 10px;
+    }
+    .already-have-account{
+
+        font-size: 15px;
+    
+        color: #F9E57C;
+    
+        margin: 30px;
+    
+        cursor: pointer;
+    }
+
+
+    .login-form button{
+
+
+        display: flex;
+      
+        align-items: center;
+      
+        justify-content: center;
+      
+          margin-left: 100px;
+      
+          margin-bottom: 20px;
+      
+      
+          cursor: pointer;
+          font-size: 14px;
+          background-color: #F9E57C;
+      
+          color: #fff;
+      
+         
+          border-radius: 5px;
+          margin-top: 50px;
+      
+          width: 150px;
+      
+          padding: 10px;
+      
+          border: none;
+      }
+      
 }
