--- a/SendIT/src/app/components/navbar/navbar.component.css
+++ b/SendIT/src/app/components/navbar/navbar.component.css
@@ -69,3 +69,48 @@ a{
     cursor: pointer;
     color: #fff;
 }
+
+
+
+@media screen and (max-width: 600px){
+
+    
+
+    .logo{
+
+        font-size: 20px;
+
+        margin-left: 20px;
+
+    }
+
+    .signup{
+
+        background-color: #D78287;
+    
+        padding: 5px;
+    
+        border: none;
+    
+        margin-right: 10px;
+    
+        color: #fff;
+    
+        font-weight: 300;
+    
+        width: 50px;
+    
+        cursor: pointer;
+    }
+
+    .login{
+
+        margin-right: 20px;
+    
+        font-size: 13px;
+    
+        cursor: pointer;
+        color: #fff;
+    }
+    
+}
